crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/full_support_preserves_const_tag_assignments.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write file.svelte
```

## `biome.json`

```json
{
  "html": {
    "experimentalFullSupportEnabled": true,
    "formatter": { "enabled": true }
  },
  "linter": { "rules": { "recommended": false } },
  "assist": { "enabled": false }
}
```

## `file.svelte`

```svelte
{#if true}
	{@const value = source}
	{@const { property } = source}
	{@const [item] = source}
	{@const nested = (source = 1) + 2}
	{@const callback = () => (source = 1)}
{/if}

```

# Emitted Messages

```block
biome.json:6:23 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
    4 │                 "formatter": { "enabled": true }
    5 │             },
  > 6 │             "linter": { "rules": { "recommended": false } },
      │                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    7 │             "assist": { "enabled": false }
    8 │         }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
