crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/full_support_script_generics_with_braces.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format file.svelte
```

## `biome.json`

```json
{
  "html": {
    "formatter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts" generics="T extends { selected?: boolean; name?: string }">
interface Props {
	items: T[];
}

let { items }: Props = $props();
</script>

<p>{items.length}</p>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
