crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/full_support_ts.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe file.svelte
```

## `biome.json`

```json
{
  "html": {
    "formatter": { "enabled": true },
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
import { sure } from "sure.js";
import z from "zod";

interface Props {
	title: string;
}

let schema = z.object().optional();
schema + sure();
const _props: Props = { title: "Hello" };
</script>

<html>
	<head>
		<title>Svelte</title>
	</head>
	<body></body>
</html>

<style>
#id {
	font-family: comic-sans;
}
.class {
	background: red;
}
</style>

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.svelte:14:1 lint/a11y/useHtmlLang ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Provide a lang attribute when using the html element.
  
    12 │ </script>
    13 │ 
  > 14 │ <html>
       │ ^^^^^^
    15 │ 	<head>
    16 │ 		<title>Svelte</title>
  
  i Setting a lang attribute on HTML document elements configures the language used by screen readers when no user default is specified.
  

```

```block
file.svelte:23:15 lint/a11y/useGenericFontNames ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Generic font family missing.
  
    21 │ <style>
    22 │ #id {
  > 23 │ 	font-family: comic-sans;
       │ 	             ^^^^^^^^^^
    24 │ }
    25 │ .class {
  
  i Consider adding a generic font family as a fallback.
  
  i For examples and more information, see the MDN Web Docs
  
  - serif
  - sans-serif
  - monospace
  - etc.
  

```

```block
Checked 1 file in <TIME>. Fixed 1 file.
Found 2 errors.
```
