crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/full_support_writes_attribute_expression_fix.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe --only=style/useBlockStatements file.svelte
```

## `biome.json`

```json
{
  "html": { "experimentalFullSupportEnabled": true },
  "linter": {
    "rules": { "recommended": false, "style": { "useBlockStatements": "warn" } }
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
	let open = true;

	function close() {
		open = false;
	}
</script>

<button
	type="button"
	onclick={() => {
		if (open) { close(); }
	}}
>
	Close
</button>

```

# Emitted Messages

```block
biome.json:3:23 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
    1 │ {
    2 │             "html": { "experimentalFullSupportEnabled": true },
  > 3 │             "linter": {
      │                       ^
  > 4 │                 "rules": { "recommended": false, "style": { "useBlockStatements": "warn" } }
  > 5 │             }
      │             ^
    6 │         }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
