crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/lint_stdin_apply_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
<script context="module" lang="ts">
var foo: string = "";
</script>
<div></div>
```

# Emitted Messages

```block
<script context="module" lang="ts">
var foo = "";
</script>
<div></div>
```

```block
file.svelte lint/style/noVar  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Use let or const instead of var.
  
  i A variable declared with var is accessible in the whole module. Thus, the variable can be accessed before its initialization and outside the block where it is declared.
  
  i See MDN web docs for more details.
  
  i Unsafe fix: Use 'const' instead.
  
    1   │ - var·foo·=·"";
      1 │ + const·foo·=·"";
    2 2 │   
  

```
