crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/lint_stdin_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --stdin-file-path file.svelte
```

# Input messages

```block
<script context="module" lang="ts">
var foo: string = "";
</script>
<div></div>
```

# Emitted Messages

```block
<script context="module" lang="ts">
var foo: string = "";
</script>
<div></div>
```

```block
file.svelte:2:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable foo is unused.
  
    1 │ <script context="module" lang="ts">
  > 2 │ var foo: string = "";
      │     ^^^
    3 │ </script>
    4 │ <div></div>
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend foo with an underscore.
  
    1   │ - var·foo:·string·=·"";
      1 │ + var·_foo:·string·=·"";
    2 2 │   
  

```
