crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/lint_stdin_write_unsafe_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe --stdin-file-path file.svelte
```

# Input messages

```block
<script context="module" lang="ts">
var foo: string = "";
</script>
<div></div>
```

# Emitted Messages

```block
<script context="module" lang="ts">
var _foo: string = "";
</script>
<div></div>
```
