crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/no_comma_operator_not_triggered_in_svelte_template_expression.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script>
  let x = 1;
</script>

<!-- Comma operator in template expression - skipped by the hack -->
<p>{(console.log("side effect"), x)}</p>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
