crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/no_comma_operator_triggered_in_svelte_template_expression.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script>
  let x = 1;
</script>

<!-- Comma operator in template expression - should be flagged -->
<p>{(console.log("side effect"), x)}</p>
```

# Emitted Messages

```block
file.svelte:6:32 lint/complexity/noCommaOperator ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! The comma operator is disallowed.
  
    5 │ <!-- Comma operator in template expression - should be flagged -->
  > 6 │ <p>{(console.log("side effect"), x)}</p>
      │                                ^
  
  i Its use is often confusing and obscures side effects.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 warning.
```
